# web-scraper

./: pyproject.toml
tests/: test_web_scraper.py
web_scraper/: web_scraper.py
